--- a/sass/views/_farms.scss
+++ b/sass/views/_farms.scss
@@ -203,6 +203,9 @@
         .farm__container__grid {
             grid-template-columns: auto  !important;
         }
+        .farm__help{
+            margin-bottom: 4rem;
+        }
     }
 
 }
