--- a/css/main.css
+++ b/css/main.css
@@ -126,7 +126,9 @@
   .pool__titulo__left h1 {
     font-size: 3rem !important; }
   .pool__titulo__left div {
-    font-size: 1.3rem !important; } }
+    font-size: 1.3rem !important; }
+  .farm__titulo__img {
+    display: none; } }
 
 /*Generales*/
 /*Variables para header*/
@@ -209,6 +211,21 @@
           cursor: pointer;
           opacity: 0.5;
           transition: 0.3s; }
+
+@media only screen and (max-width: 776px) {
+  .liquidity__pikachu__trader {
+    margin-bottom: 4rem; }
+    .liquidity__pikachu__trader__img {
+      width: 51%; }
+    .liquidity__pikachu__trader__globo {
+      text-align: end; }
+      .liquidity__pikachu__trader__globo__img {
+        width: 100%;
+        margin-top: 4%; }
+        .liquidity__pikachu__trader__globo__img:hover {
+          cursor: pointer;
+          opacity: 0.1;
+          transition: 0.2s; } }
 
 /*Generales*/
 /*Variables para header*/
@@ -488,13 +505,14 @@
 
 @media only screen and (max-width: 1024px) and (max-width: 776px) {
   .farm__container__grid {
-    grid-template-columns: auto  !important; } }
+    grid-template-columns: auto  !important; }
+  .farm__help {
+    margin-bottom: 4rem; } }
 
 .background__container__home {
   background-image: url(../img/fondo-index-noche.jpg);
   background-repeat: no-repeat;
-  background-size: cover;
-  height: 100vh; }
+  background-size: cover; }
 
 .home__gameboy {
   left: 15.25%;
@@ -503,6 +521,9 @@
   width: 69.5%; }
 
 .home__gameboy__color {
+  display: none; }
+
+.gameboy__color {
   display: none; }
 
 /* codigo carrusel de w3school*/
@@ -646,10 +667,14 @@
   .prev, .next, .text {
     font-size: 11px; } }
 
+.header__nav__index {
+  display: none; }
+
 @media only screen and (max-width: 1024px) {
-  .background__container__home {
-    background-image: none;
+  .background__home {
     background-color: #652f8d; }
+  .background__container__home {
+    background-image: none; }
   .home__gameboy {
     display: none; }
   .home__gameboy__color {
@@ -718,6 +743,17 @@
   #pause {
     left: 51.5% !important;
     top: 83% !important; } }
+
+@media only screen and (max-width: 1024px) and (max-width: 767px) {
+  .mobile__none {
+    display: none; }
+  .header__nav__index {
+    display: block; }
+  .nav__bar__mobile {
+    display: flex;
+    align-items: center; }
+    .nav__bar__mobile .container {
+      margin-left: 0.5rem; } }
 
 /* Bordes Negros */
 .border__left {
@@ -860,27 +896,107 @@
   100% {
     opacity: 1; } }
 
-/*extend*/
-.collection, .collection__h1, .collection__img {
-  width: 200px;
-  height: 200px;
-  background-color: yellow;
-  margin-left: 700px; }
+@media only screen and (max-width: 1024px) {
+  .recuadro {
+    width: 51%;
+    height: 50%;
+    left: 0%; }
+    .recuadro__opt {
+      width: 100%; }
+      .recuadro__opt div div a {
+        font-size: 2rem; }
+  .border {
+    display: none; }
+  .btn {
+    left: 0%;
+    bottom: 0%;
+    width: 100%; } }
 
-.collection__h1 {
-  background-color: orange;
-  font-weight: bold;
-  font-size: 3rem; }
+@media only screen and (max-width: 1024px) and (max-width: 767px) {
+  .btn p {
+    font-size: 1rem; }
+  .recuadro {
+    width: 51%;
+    height: 50%;
+    left: 0%; }
+    .recuadro__opt {
+      width: 100%; }
+      .recuadro__opt div div a {
+        font-size: 1rem; } }
 
-.collection__img {
-  padding: 1rem; }
+.collection {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  background-image: url("../img/fondo-index-noche2.jpg");
+  background-size: contain;
+  background-position: center; }
+
+.collection__section {
+  display: grid;
+  grid-template-areas: "auto auto auto auto" !important; }
+
+@media only screen and (max-width: 1024px) {
+  .collection__section {
+    grid-template-areas: "auto auto " !important; }
+  .collection__mobile {
+    display: none; }
+  .mint-img {
+    display: none; } }
+
+@media only screen and (max-width: 1024px) and (max-width: 1024px) {
+  .collection__section {
+    grid-template-areas: 'auto ' !important; } }
+
+/*Generales*/
+/*Variables para header*/
+.flex {
+  display: flex; }
+
+.bg-white {
+  background-color: #faf9fa; }
+
+/*Fuentes*/
+@font-face {
+  font-family: pokemon;
+  src: url(../letras/ketchum.otf); }
+
+@font-face {
+  font-family: gameboy;
+  src: url(../letras/pokemon-classic.ttf); }
 
 .lands {
-  display: flex;
-  justify-content: center;
-  background-color: #d1c8c8; }
-  .lands__img {
-    border-radius: 2rem; }
+  padding: 3rem 0rem; }
+
+.land__section {
+  display: grid;
+  grid-template-areas: 'auto auto';
+  gap: 3rem;
+  padding: 2rem; }
+  .land__section__container {
+    border-radius: 1rem;
+    background-color: white;
+    border: solid #e7e3eb 1px; }
+    .land__section__container__img {
+      padding: 1rem; }
+    .land__section__container div img {
+      width: 100%;
+      border-radius: 1rem; }
+    .land__section__container__bot {
+      padding: 0rem 1rem 1rem 1rem; }
+      .land__section__container__bot__flex {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        margin-top: 1.5rem;
+        border-top: solid #e7e3eb 1px;
+        padding-top: 0.2rem; }
+
+@media only screen and (max-width: 1024px) {
+  .land__section {
+    grid-template-areas: 'auto'; }
+  .land__mobile {
+    margin-bottom: 7rem; } }
 
 /*Generales*/
 /*Variables para header*/
@@ -926,6 +1042,33 @@
       padding: 1rem;
       font-size: 1.5rem;
       font-family: gameboy; }
+
+@media only screen and (max-width: 1024px) {
+  .background__container__info {
+    background-image: none; }
+    .background__container__info img {
+      display: none; }
+  .info {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    margin-top: 2%; }
+    .info h1 {
+      font-family: pokemon;
+      font-size: 3rem; }
+    .info article {
+      background-color: #faf9fa23;
+      border: solid 1px #e7e3eb;
+      width: auto; }
+      .info article h2 {
+        border-bottom: solid 1px #e7e3eb;
+        padding: 1rem;
+        font-size: 1rem;
+        font-family: gameboy; }
+      .info article p {
+        padding: 1rem;
+        font-size: 0.8rem;
+        font-family: gameboy; } }
 
 /*Partials*/
 /*Generales*/
@@ -1104,8 +1247,6 @@
     display: none; }
   .mobile {
     display: block; }
-  .footer__none {
-    display: none; }
   .help {
     justify-content: center; }
     .help__img {
@@ -1118,6 +1259,144 @@
 
 /*Fin responsive Navbar*/
 /*fin general*/
+.container {
+  display: inline-block;
+  cursor: pointer; }
+
+.bar1, .bar2, .bar3 {
+  width: 35px;
+  height: 5px;
+  background-color: #dc3545;
+  margin: 6px 0;
+  transition: 0.4s; }
+
+.change .bar1 {
+  -webkit-transform: rotate(-45deg) translate(-9px, 6px);
+  transform: rotate(-45deg) translate(-9px, 6px); }
+
+.change .bar2 {
+  opacity: 0; }
+
+.change .bar3 {
+  -webkit-transform: rotate(45deg) translate(-8px, -8px);
+  transform: rotate(45deg) translate(-8px, -8px); }
+
+.close {
+  font-size: 4rem;
+  padding-top: 1rem;
+  margin-right: 2rem; }
+
+.sidebar__home {
+  display: none;
+  position: absolute;
+  height: 92vh;
+  background-color: rgba(0, 0, 0, 0.158);
+  width: 100%;
+  animation-name: sidebar;
+  animation-duration: 0.5s;
+  animation-fill-mode: both; }
+  .sidebar__home__container {
+    background-color: #faf9fa;
+    width: 0%;
+    animation-name: sidebar-container;
+    animation-duration: 0.5s;
+    animation-fill-mode: both;
+    height: 92vh; }
+    .sidebar__home__container__titulo {
+      align-items: center;
+      justify-content: center; }
+      .sidebar__home__container__titulo h1 {
+        font-size: 2rem;
+        font-family: pokemon; }
+    .sidebar__home__container__list {
+      display: flex;
+      height: 71vh; }
+      .sidebar__home__container__list ul {
+        list-style: none;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around; }
+        .sidebar__home__container__list ul li a {
+          display: flex;
+          align-items: center;
+          text-decoration: none; }
+          .sidebar__home__container__list ul li a span {
+            font-size: 1.6rem;
+            color: black; }
+    .sidebar__home__container__social {
+      display: flex;
+      justify-content: space-evenly;
+      border-top: 1px solid #e7e3eb;
+      padding-top: 10px; }
+      .sidebar__home__container__social span {
+        font-size: 1.5rem;
+        color: white;
+        background-color: black;
+        padding: 0.5rem;
+        border-radius: 50%; }
+
+@keyframes sidebar {
+  0% {
+    opacity: 0; }
+  100% {
+    opacity: 1; } }
+
+@keyframes sidebar-container {
+  0% {
+    width: 0%; }
+  100% {
+    width: 65%; } }
+
+.sidebar {
+  display: none;
+  position: fixed;
+  top: 0%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.158);
+  width: 100%;
+  animation-name: sidebar;
+  animation-duration: 0.5s;
+  animation-fill-mode: both; }
+  .sidebar__container {
+    background-color: #faf9fa;
+    width: 0%;
+    animation-name: sidebar-container;
+    animation-duration: 0.5s;
+    animation-fill-mode: both;
+    height: 100vh; }
+    .sidebar__container__titulo {
+      align-items: center;
+      justify-content: center; }
+      .sidebar__container__titulo h1 {
+        font-size: 2rem;
+        font-family: pokemon; }
+    .sidebar__container__list {
+      display: flex;
+      height: 71vh; }
+      .sidebar__container__list ul {
+        list-style: none;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around; }
+        .sidebar__container__list ul li a {
+          display: flex;
+          align-items: center;
+          text-decoration: none; }
+          .sidebar__container__list ul li a span {
+            font-size: 1.6rem;
+            color: black; }
+    .sidebar__container__social {
+      display: flex;
+      justify-content: space-evenly;
+      border-top: 1px solid #e7e3eb;
+      padding-top: 10px; }
+      .sidebar__container__social span {
+        font-size: 1.5rem;
+        color: white;
+        background-color: black;
+        padding: 0.5rem;
+        border-radius: 50%; }
+
 /*Generales*/
 /*Variables para header*/
 .flex {
@@ -1172,6 +1451,15 @@
 .yellow-b {
   border-bottom: #ffd700 solid 3px !important; }
 
+.pink {
+  color: #ff83f0 !important; }
+
+.bg-pink {
+  background-color: #ff83f0; }
+
+.pink-b {
+  border-bottom: #ff83f0 solid 3px !important; }
+
 .bg-blue-ligth {
   background-color: #d4effc; }
 
@@ -1180,6 +1468,9 @@
 
 .bg-green-ligth {
   background-color: #9efa9e; }
+
+.bg-pink-ligth {
+  background-color: #fdd8f9; }
 
 .bg-yellow-ligth {
   background-color: #FFFFE0; }
@@ -1237,6 +1528,10 @@
 
 .wp {
   margin-left: 30px; }
+
+@media only screen and (max-width: 767px) {
+  footer {
+    display: none; } }
 
 /*Generales*/
 /*Variables para header*/
@@ -1383,6 +1678,15 @@
 .yellow-b {
   border-bottom: #ffd700 solid 3px !important; }
 
+.pink {
+  color: #ff83f0 !important; }
+
+.bg-pink {
+  background-color: #ff83f0; }
+
+.pink-b {
+  border-bottom: #ff83f0 solid 3px !important; }
+
 .bg-blue-ligth {
   background-color: #d4effc; }
 
@@ -1391,6 +1695,9 @@
 
 .bg-green-ligth {
   background-color: #9efa9e; }
+
+.bg-pink-ligth {
+  background-color: #fdd8f9; }
 
 .bg-yellow-ligth {
   background-color: #FFFFE0; }
