--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -58,3 +58,11 @@
 .wp {
     margin-left: 30px;
 }
+
+
+@media only screen and (max-width: 767px) {
+
+    footer{
+        display: none;
+    }
+}
