--- a/sass/views/_home.scss
+++ b/sass/views/_home.scss
@@ -2,7 +2,6 @@
     background-image: url(../img/fondo-index-noche.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    height: 100vh;
 }
 
 .home {
@@ -16,7 +15,9 @@
       display: none;
     }
 }
-
+.gameboy__color{
+  display: none;
+}
 
 /* codigo carrusel de w3school*/
 .mySlides {display: none}
@@ -181,12 +182,16 @@
 }
 
 //mind width
-
+.header__nav__index{
+  display: none;
+}
 @media only screen and (max-width: 1024px){
 
+  .background__home {
+    background-color: #652f8d;
+  }
   .background__container__home{
     background-image: none;
-    background-color: #652f8d;
   }
   .home {
     &__gameboy {
@@ -277,5 +282,20 @@
     left: 51.5% !important;
     top: 83% !important;
   }
-  
+  @media only screen and (max-width: 767px){
+    .mobile__none{
+      display: none;
+    }
+    .header__nav__index{
+      display: block;
+    }
+    .nav__bar__mobile{
+      display: flex;
+      align-items: center;
+      & .container {
+        margin-left: 0.5rem;
+      }
+    }
+  }
 }
+
