--- a/css/main.css
+++ b/css/main.css
@@ -656,6 +656,9 @@
   animation-name: fade;
   animation-duration: 1.5s; }
 
+.mobile__block {
+  display: none; }
+
 @keyframes fade {
   from {
     opacity: .4; }
@@ -753,7 +756,40 @@
     display: flex;
     align-items: center; }
     .nav__bar__mobile .container {
-      margin-left: 0.5rem; } }
+      margin-left: 0.5rem; }
+  .mobile__block {
+    display: block; }
+  .mobile__index div {
+    display: flex;
+    justify-content: end;
+    margin-top: 2rem; }
+  .mobile__index img {
+    width: 35%; }
+  .mobile__index h1 {
+    font-family: pokemon;
+    font-size: 3rem;
+    padding: 1rem; }
+  .mobile__index h2 {
+    font-size: 1.5rem;
+    padding: 1rem; }
+  .mobile__index article {
+    display: flex;
+    justify-content: space-around; }
+  .btn__1 {
+    padding: 1rem;
+    margin: 1rem;
+    border-radius: 1.5rem;
+    background-color: #dc3545;
+    color: white;
+    border: none; }
+  .btn__2 {
+    padding: 1rem;
+    margin: 1rem;
+    background-color: none;
+    border: solid 1px #dc3545;
+    border-radius: 1.5rem; }
+  .background__home {
+    background-color: #faeded; } }
 
 /* Bordes Negros */
 .border__left {
@@ -1244,7 +1280,7 @@
 
 @media only screen and (max-width: 1024px) and (max-width: 767px) {
   .nav__bar__info, .nav__bar__trade, .nav__bar__nft {
-    display: none; }
+    display: block; }
   .mobile {
     display: block; }
   .help {
@@ -1349,7 +1385,7 @@
 
 .sidebar {
   display: none;
-  position: fixed;
+  position: absolute;
   top: 0%;
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.158);
