--- a/sass/partials/_header.scss
+++ b/sass/partials/_header.scss
@@ -192,7 +192,7 @@
     @media only screen and (max-width: 767px) {
 
         .nav__bar__info , .nav__bar__trade , .nav__bar__nft{
-            display: none;
+            display: block;
         }
         .mobile {
             display: block;
@@ -323,7 +323,7 @@ transform: rotate(45deg) translate(-8px, -8px);
 //sidebar para corregir erro de fixed
 .sidebar{
     display: none;
-    position: fixed;
+    position: absolute;
     top: 0%;
     height: 100vh;
     background-color: rgba(0, 0, 0, 0.158);
