--- a/sass/views/_home.scss
+++ b/sass/views/_home.scss
@@ -170,7 +170,7 @@
   animation-name: fade;
   animation-duration: 1.5s;
 }
-
+.mobile__block{display: none;}
 @keyframes fade {
   from {opacity: .4} 
   to {opacity: 1}
@@ -295,6 +295,51 @@
       & .container {
         margin-left: 0.5rem;
       }
+    }
+    .mobile__block{
+      display: block;
+    }
+    .mobile__index{
+      & div{
+        display: flex;
+        justify-content: end;
+        margin-top: 2rem;
+      }
+      & img{
+        width: 35%;
+      }
+      & h1{
+        font-family: pokemon;
+        font-size: 3rem;
+        padding: 1rem;
+      }
+      & h2 {
+        font-size: 1.5rem;
+        padding: 1rem;
+      }
+      & article{
+        display: flex;
+        justify-content: space-around;
+      }
+      
+    }
+    .btn__1{
+      padding: 1rem;
+      margin: 1rem;
+      border-radius: 1.5rem;
+      background-color: $red;
+      color: white;
+      border: none;
+    }
+    .btn__2{
+      padding: 1rem;
+      margin: 1rem;
+      background-color: none;
+      border: solid 1px $red;
+      border-radius: 1.5rem;
+    }
+    .background__home{
+      background-color: #faeded;
     }
   }
 }
