--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -39,7 +39,7 @@
         }
     }
     & article div ul li h2 {
-        color: #420000;
+        color: #000000;
         font-size: 1.5rem;
     }
     &__li {
@@ -52,6 +52,9 @@
         &__img {
             height: 1.6rem;
             cursor: pointer;
+        }
+        & div a {
+            text-decoration: none;
         }
     }
 }
